[package]
name = "cargo-sort"
version = "1.0.9"
authors = ["Devin R <devin.ragotzy@gmail.com>", "Andronik Ordian <write@reusable.software>"]
license = "MIT/Apache-2.0"
description = "Check if tables and items in a .toml file are lexically sorted"
repository = "https://github.com/DevinR528/cargo-sort"
keywords = ["cargo", "subcommand", "dependencies", "sort", "check"]
categories = ["development-tools::cargo-plugins", "development-tools"]
edition = "2018"
readme = "README.md"
exclude = ["examp", "fixtures"]
default-run = "cargo-sort"

# [features]
# fuzz = ["afl"]

[dependencies]
# afl = { version = "0.10", optional = true }
clap = { version = "4.0.10", features = ["wrap_help", "cargo"] }
glob = "0.3"
termcolor = "1.1"
toml_edit = "0.19"

[dev-dependencies]
pretty_assertions = "1.0.0"
serde_json = "1"

# The following is commented out for releases because of
# https://github.com/DevinR528/cargo-sort/issues/31
# see also https://github.com/rust-lang/cargo/issues/8703

# [[bin]]
# name = "cargo-sort"
# path = "src/main.rs"

# In order to run fuzz
# `cargo install afl`
# `cargo afl build --features=fuzz --bin fuzz`
# `cargo afl target/debug/fuzz`

# [[bin]]
# name = "fuzz"
# path = "src/fuzz.rs"
# required-features = ["fuzz"]
