[package]
name = "cargo-sort"
version = "2.0.2"
authors = [
    "Devin R <devin.ragotzy@gmail.com>",
    "Andronik Ordian <write@reusable.software>",
]
license = "MIT/Apache-2.0"
description = "Check if tables and items in a .toml file are lexically sorted"
repository = "https://github.com/DevinR528/cargo-sort"
keywords = ["cargo", "subcommand", "dependencies", "sort", "check"]
categories = ["development-tools::cargo-plugins", "development-tools"]
edition = "2021"
readme = "README.md"
exclude = ["examp", "fixtures"]
default-run = "cargo-sort"
rust-version = "1.82"

# [features]
# fuzz = ["afl"]

[dependencies]
# afl = { version = "0.10", optional = true }
clap = { version = "4.0.10", features = ["wrap_help", "cargo", "derive"] }
glob = "0.3"
termcolor = "1.1"
toml_edit = "0.22"

[dev-dependencies]
serde_json = "1"
similar-asserts = "1.5.0"

# The following is commented out for releases because of
# https://github.com/DevinR528/cargo-sort/issues/31
# see also https://github.com/rust-lang/cargo/issues/8703

# [[bin]]
# name = "cargo-sort"
# path = "src/main.rs"

# In order to run fuzz
# `cargo install afl`
# `cargo afl build --features=fuzz --bin fuzz`
# `cargo afl target/debug/fuzz`

# [[bin]]
# name = "fuzz"
# path = "src/fuzz.rs"
# required-features = ["fuzz"]

[profile.release]
lto = true

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
empty_line_after_outer_attr = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
mod_module_files = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
todo = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
wildcard_imports = "warn"
